--- a/src/Motocycle.Infra/Motocycle.Infra.csproj
+++ b/src/Motocycle.Infra/Motocycle.Infra.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Motocycle.Domain\Motocycle.Domain.csproj" />
+    <ProjectReference Include="..\Motocycle.Domain.Core\Motocycle.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
