--- a/src/Motocycle.Application/Motocycle.Application.csproj
+++ b/src/Motocycle.Application/Motocycle.Application.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+ 
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+ <ItemGroup>
+    <ProjectReference Include="..\Motocycle.Domain\Motocycle.Domain.csproj" />
+  </ItemGroup>
+  
 </Project>
