--- a/src/Motocycle.Api/Motocycle.Api.csproj
+++ b/src/Motocycle.Api/Motocycle.Api.csproj
@@ -7,7 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+   <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
   </ItemGroup>
-
+ <ItemGroup>
+    <Folder Include="Configurations\Swagger\Examples\" />
+  </ItemGroup>
+ <ItemGroup>
+   <ProjectReference Include="..\Motocycle.Infra.CrossCutting.Commons\Motocycle.Infra.CrossCutting.Commons.csproj" />
+   <ProjectReference Include="..\Motocycle.Application\Motocycle.Application.csproj" />
+   <ProjectReference Include="..\Motocycle.Infra.CrossCutting.IoC\Motocycle.Infra.CrossCutting.IoC.csproj" />
+ </ItemGroup>
 </Project>
