--- a/src/Motocycle.Infra.CrossCutting.MessageBroker/Motocycle.Infra.CrossCutting.MessageBroker.csproj
+++ b/src/Motocycle.Infra.CrossCutting.MessageBroker/Motocycle.Infra.CrossCutting.MessageBroker.csproj
@@ -1,5 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Motocycle.Infra.CrossCutting.Commons\Motocycle.Infra.CrossCutting.Commons.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.400.40" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.400.40" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
