--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -2,8 +2,38 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "LogSettings": {
+    "Bucket": "motocycle-application-logs",
+    "AppName": "motocycleapp"
+  },
+  "Queues": {
+    "Consumers": {
+      "MotocycleProcess": "CREATE_MOTOCYCLE_PROCESS_DEV",
+      "RetryLimit": 3,
+      "UpdateMotocycle": "UPDATE_MOTOCYLE_PLATE_DEV"
+    },
+    "Producers": {
+      "MotocycleProcess": "CREATE_MOTOCYCLE_PROCESS_DEV",
+      "ClientNotificationSender": "MOTOCYCLE_NOTIFICATION_DEV",
+      "CreateMotocycle": "CREATE_MOTOCYCLE_PROCESS_DEV"
+    }
+  },
+  "MessageBrokerSettings": {
+    "Profile": "default",
+    "Region": "us-east-1",
+    "Host": "localhost",
+    "TimeToDelay": 3
+  },
+  "DbContext": {
+    "ConnectionString": "host=localhost;Port=5432;Database=motocycle_db;User Id=admin;Password=2846Cycle"
+  },
+  "DATABASE_HOST": "localhost:5432",
+  "DATABASE_USER": "admin",
+  "DATABASE_PASSWORD": "2846Cycle",
+  "DATABASE_NAME": "motocycle_db",
   "AllowedHosts": "*"
 }
