--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -28,7 +28,7 @@
     "Host": "localhost",
     "TimeToDelay": 3
   },
-  "DbContext": {
+  "DbSettings": {
     "ConnectionString": "host=localhost;Port=5432;Database=motocycle_db;User Id=admin;Password=2846Cycle"
   },
   "DATABASE_HOST": "localhost:5432",
