--- a/src/Motocycle.Api/Properties/launchSettings.json
+++ b/src/Motocycle.Api/Properties/launchSettings.json
@@ -16,7 +16,13 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5261",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AWS_ACCESS_KEY_ID": "",
+        "AWS_DEFAULT_REGION": "us-east-1",
+        "AWS_SECRET_ACCESS_KEY": "",
+        "DATABASE_HOST": "localhost:5432",
+        "DATABASE_PASSWORD": "2846Cycle",
+        "DATABASE_USER": "admin"
       }
     },
     "https": {
@@ -26,7 +32,13 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7144;http://localhost:5261",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AWS_ACCESS_KEY_ID": "",
+        "AWS_DEFAULT_REGION": "us-east-1",
+        "AWS_SECRET_ACCESS_KEY": "",
+        "DATABASE_HOST": "localhost:5432",
+        "DATABASE_PASSWORD": "2846Cycle",
+        "DATABASE_USER": "admin"
       }
     },
     "IIS Express": {
@@ -34,7 +46,13 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AWS_ACCESS_KEY_ID": "",
+        "AWS_DEFAULT_REGION": "us-east-1",
+        "AWS_SECRET_ACCESS_KEY": "",
+        "DATABASE_HOST": "localhost:5432",
+        "DATABASE_PASSWORD": "2846Cycle",
+        "DATABASE_USER": "admin"
       }
     },
     "Motocycle.Api": {
