--- a/src/Motocycle.Api/Motocycle.Api.csproj
+++ b/src/Motocycle.Api/Motocycle.Api.csproj
@@ -8,6 +8,7 @@
  
   <ItemGroup>
    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+   <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
