--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -17,15 +17,17 @@
       "UpdateMotocycle": "UPDATE_MOTOCYLE_PLATE_DEV"
     },
     "Producers": {
-      "MotocycleProcess": "CREATE_MOTOCYCLE_PROCESS_DEV",
+      "CreateMotocycleProcess": "CREATE_MOTOCYCLE_DEV",
       "ClientNotificationSender": "MOTOCYCLE_NOTIFICATION_DEV",
       "CreateMotocycle": "CREATE_MOTOCYCLE_PROCESS_DEV"
     }
   },
+
   "MessageBrokerSettings": {
     "Profile": "default",
     "Region": "us-east-1",
     "Host": "localhost",
+    "TopicHost": "arn:aws:sns:{region}:000000000000",
     "TimeToDelay": 3
   },
   "DbSettings": {
