--- a/src/Motocycle.Api/Motocycle.Api.csproj
+++ b/src/Motocycle.Api/Motocycle.Api.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
  
   <ItemGroup>
-   <FrameworkReference Include="Microsoft.AspNetCore.App" />
    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
@@ -25,8 +26,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
   </ItemGroup>
  <ItemGroup>
-    <Folder Include="Configurations\Swagger\" />
-  </ItemGroup>
+		<Folder Include="Configurations\Swagger\" />
+		<Folder Include="Middleware\" />
+		<Folder Include="wwwroot\css\" />
+	</ItemGroup>
  <ItemGroup>
    <ProjectReference Include="..\Motocycle.Infra.CrossCutting.Commons\Motocycle.Infra.CrossCutting.Commons.csproj" />
    <ProjectReference Include="..\Motocycle.Application\Motocycle.Application.csproj" />
