--- a/src/Motocycle.Infra.CrossCutting.Commons/Motocycle.Infra.CrossCutting.Commons.csproj
+++ b/src/Motocycle.Infra.CrossCutting.Commons/Motocycle.Infra.CrossCutting.Commons.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.Core" Version="3.7.400.40" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.405.4" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.400.40" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.400.40" />
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
@@ -29,7 +30,6 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
-     <FrameworkReference Include="Microsoft.AspNetCore.App" />
      <PackageReference Include="Serilog" Version="4.1.0" />
      <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
      <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
