--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -26,7 +26,7 @@
   "MessageBrokerSettings": {
     "Profile": "default",
     "Region": "us-east-1",
-    "Host": "localhost",
+    "Host": "localhost:4566",
     "TopicHost": "arn:aws:sns:{region}:000000000000",
     "TimeToDelay": 3
   },
