fiz topic e queue

--- a/src/Motocycle.Api/Properties/launchSettings.json
+++ b/src/Motocycle.Api/Properties/launchSettings.json
@@ -33,9 +33,9 @@
       "applicationUrl": "https://localhost:7144;http://localhost:5261",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AWS_ACCESS_KEY_ID": "",
+        "AWS_ACCESS_KEY_ID": "test",
         "AWS_DEFAULT_REGION": "us-east-1",
-        "AWS_SECRET_ACCESS_KEY": "",
+        "AWS_SECRET_ACCESS_KEY": "test",
         "DATABASE_HOST": "localhost:5432",
         "DATABASE_PASSWORD": "2846Cycle",
         "DATABASE_USER": "admin"
