--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -12,7 +12,7 @@
   },
   "Queues": {
     "Consumers": {
-      "MotocycleProcess": "CREATE_MOTOCYCLE_PROCESS_DEV",
+      "MotocycleProcess": "motocycleprocess",
       "RetryLimit": 3,
       "UpdateMotocycle": "UPDATE_MOTOCYLE_PLATE_DEV"
     },
