--- a/src/Motocycle.Api/Properties/launchSettings.json
+++ b/src/Motocycle.Api/Properties/launchSettings.json
@@ -13,13 +13,13 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "http://localhost:5261/motocycleapp/api-docs",
       "applicationUrl": "http://localhost:5261",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AWS_ACCESS_KEY_ID": "test",
+        "AWS_ACCESS_KEY_ID": "dummy",
         "AWS_DEFAULT_REGION": "us-east-1",
-        "AWS_SECRET_ACCESS_KEY": "test",
+        "AWS_SECRET_ACCESS_KEY": "dummy",
         "DATABASE_HOST": "localhost:5432",
         "DATABASE_PASSWORD": "2846Cycle",
         "DATABASE_USER": "admin"
@@ -29,13 +29,13 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "http://localhost:5261/motocycleapp/api-docs",
       "applicationUrl": "https://localhost:7144;http://localhost:5261",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AWS_ACCESS_KEY_ID": "test",
+        "AWS_ACCESS_KEY_ID": "dummy",
         "AWS_DEFAULT_REGION": "us-east-1",
-        "AWS_SECRET_ACCESS_KEY": "test",
+        "AWS_SECRET_ACCESS_KEY": "dummy",
         "DATABASE_HOST": "localhost:5432",
         "DATABASE_PASSWORD": "2846Cycle",
         "DATABASE_USER": "admin"
@@ -44,12 +44,12 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "http://localhost:5002/motocycleapp/api-docs",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AWS_ACCESS_KEY_ID": "test",
+        "AWS_ACCESS_KEY_ID": "dummy",
         "AWS_DEFAULT_REGION": "us-east-1",
-        "AWS_SECRET_ACCESS_KEY": "test",
+        "AWS_SECRET_ACCESS_KEY": "dummy",
         "DATABASE_HOST": "localhost:5432",
         "DATABASE_PASSWORD": "2846Cycle",
         "DATABASE_USER": "admin"
@@ -59,13 +59,13 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5002",
+      "launchUrl": "http://localhost:5002/motocycleapp/api-docs",
       "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AWS_ACCESS_KEY_ID": "test",
+        "AWS_ACCESS_KEY_ID": "dummy",
         "AWS_DEFAULT_REGION": "us-east-1",
-        "AWS_SECRET_ACCESS_KEY": "test",
+        "AWS_SECRET_ACCESS_KEY": "dummy",
         "DATABASE_HOST": "localhost:5432",
         "DATABASE_PASSWORD": "2846Cycle",
         "DATABASE_USER": "admin"
@@ -75,13 +75,13 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5002",
+      "launchUrl": "http://localhost:5002/motocycleapp/api-docs",
       "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AWS_ACCESS_KEY_ID": "test",
+        "AWS_ACCESS_KEY_ID": "dummy",
         "AWS_DEFAULT_REGION": "us-east-1",
-        "AWS_SECRET_ACCESS_KEY": "test",
+        "AWS_SECRET_ACCESS_KEY": "dummy",
         "DATABASE_HOST": "localhost:5432",
         "DATABASE_PASSWORD": "2846Cycle",
         "DATABASE_USER": "admin"
