--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -10,6 +10,10 @@
     "Bucket": "motocycle-application-logs",
     "AppName": "motocycleapp"
   },
+  "AWS": {
+    "Profile": "localstack",
+    "Region": "us-east-1"
+  },
   "Queues": {
     "Consumers": {
       "MotocycleProcess": "motocycleprocess",
@@ -26,8 +30,8 @@
   "MessageBrokerSettings": {
     "Profile": "default",
     "Region": "us-east-1",
-    "Host": "localhost:4566",
-    "TopicHost": "arn:aws:sns:{region}:000000000000",
+    "Host": "http://localhost:4566/",
+    "TopicHost": "http://localhost:4566/",
     "TimeToDelay": 3
   },
   "DbSettings": {
