--- a/src/Motocycle.Api/appsettings.json
+++ b/src/Motocycle.Api/appsettings.json
@@ -8,20 +8,24 @@
   },
   "LogSettings": {
     "Bucket": "motocycle-application-logs",
-    "AppName": "motocycleapp"
+    "AppName": "motocycleapp",
+    "Region": "us-east-1",
+    "Path": ""
   },
   "AWS": {
-    "Profile": "localstack",
-    "Region": "us-east-1"
+    "ServiceURL": "http://localhost:4566",
+    "Region": "us-east-1",
+    "AccessKey": "dummy",
+    "SecretKey": "dummy"
   },
   "Queues": {
     "Consumers": {
-      "MotocycleProcess": "motocycleprocess",
-      "RetryLimit": 3,
+      "MotocycleProcess": "CREATE_MOTOCYCLE_DEV",
+      "RetryLimit": 2,
       "UpdateMotocycle": "UPDATE_MOTOCYLE_PLATE_DEV"
     },
     "Producers": {
-      "CreateMotocycleProcess": "CREATE_MOTOCYCLE_DEV",
+      "CreateMotocycleSender": "CREATE_MOTOCYCLE_DEV",
       "ClientNotificationSender": "MOTOCYCLE_NOTIFICATION_DEV",
       "CreateMotocycle": "CREATE_MOTOCYCLE_PROCESS_DEV"
     }
@@ -30,7 +34,7 @@
   "MessageBrokerSettings": {
     "Profile": "default",
     "Region": "us-east-1",
-    "Host": "http://localhost:4566/",
+    "Host": "http://sqs.{region}.localhost.localstack.cloud:4566/000000000000/",
     "TopicHost": "http://localhost:4566/",
     "TimeToDelay": 3
   },
