--- a/src/Motocycle.Infra.CrossCutting.Commons/Motocycle.Infra.CrossCutting.Commons.csproj
+++ b/src/Motocycle.Infra.CrossCutting.Commons/Motocycle.Infra.CrossCutting.Commons.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="AWSSDK.Core" Version="3.7.400.40" />
-    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.405.4" />
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.400.40" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.400.40" />
+    <PackageReference Include="AWSSDK.Core" Version="4.0.0-preview.4" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.0-preview.4" />
+    <PackageReference Include="AWSSDK.S3" Version="4.0.0-preview.4" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="4.0.0-preview.4" />
+    <PackageReference Include="AWSSDK.SQS" Version="4.0.0-preview.4" />
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
@@ -35,7 +35,7 @@
      <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
      <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
      <PackageReference Include="Serilog.Sinks.AmazonS3" Version="1.5.2" />
-     <PackageReference Include="Serilog.Sinks.Async" Version="2.0.0" />
+     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
      <PackageReference Include="SQS.ServiceBus" Version="1.1.1" />
      
